syntax = "proto3";

package inventory;

option go_package = "github.com/test-workflow/api-gateway/internal/grpc/proto/inventory";
option java_package = "com.testworkflow.proto";
option csharp_namespace = "TestWorkflow.Proto";

import "common.proto";

// Inventory Service - handles product stock management

service InventoryService {
  // Get product stock
  rpc GetStock(GetStockRequest) returns (StockResponse);

  // Update stock (increase/decrease)
  rpc UpdateStock(UpdateStockRequest) returns (StockResponse);

  // Reserve stock for an order
  rpc ReserveStock(ReserveStockRequest) returns (common.StatusResponse);

  // Release reserved stock
  rpc ReleaseStock(ReleaseStockRequest) returns (common.StatusResponse);

  // List all products
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);

  // Add new product
  rpc AddProduct(AddProductRequest) returns (ProductResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
  int32 reserved = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetStockRequest {
  string product_id = 1;
}

message StockResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity_change = 2; // positive to add, negative to remove
}

message ReserveStockRequest {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
}

message ReleaseStockRequest {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message AddProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}

message ProductResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}
